<resources>
    <string name="app_name">studyblank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">L  O  G  I  N</string>
    <string name="createaccount">or create an account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirmpassword">confirm password</string>
    <string name="submit">submit</string>
    <string name="title_activity_create_account">create an account</string>
    <string name="title_activity_main">MainActivity</string>

</resources>